--- a/src/main/resources/static/user/jobPosting/css/job_posting_detail.css
+++ b/src/main/resources/static/user/jobPosting/css/job_posting_detail.css
@@ -905,3 +905,20 @@
     font-weight: bold;
     color: #007bff;
 }
+
+  .apply-button {
+            background-color: #28a745;
+            border: none;
+            border-radius: 8px;
+            padding: 12px 24px;
+            color: white;
+            font-size: 16px;
+            font-weight: bold;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            min-width: 250px;
+        }
+        
