--- a/src/main/resources/templates/corp/jobPosting/myJobPostingListPage.html
+++ b/src/main/resources/templates/corp/jobPosting/myJobPostingListPage.html
@@ -118,178 +118,176 @@
 					<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
 				</div>
 
-				<!-- Modal body -->
-				<div class="modal-body">
-                    <div class="total-applicants">
-                        총 지원자수: 120명
-                    </div>
+					<!-- Modal body -->
+					<div class="modal-body">
+						<div class="total-applicants">총 지원자수: 120명</div>
 
-                    <table class="status-table">
-                        <tr class="section-title">
-                            <td colspan="4">경력별 현황</td>
-                        </tr>
-                        <tr>
-                            <th>신입</th>
-                            <th>1~3년</th>
-                            <th>3~5년</th>
-                            <th>5년이상</th>
-                        </tr>
-                        <tr>
-                            <td>45명</td>
-                            <td>32명</td>
-                            <td>28명</td>
-                            <td>15명</td>
-                        </tr>
-                    </table>
+						<table class="status-table">
+							<tr class="section-title">
+								<td colspan="4">경력별 현황</td>
+							</tr>
+							<tr>
+								<th>신입</th>
+								<th>1~3년</th>
+								<th>3~5년</th>
+								<th>5년이상</th>
+							</tr>
+							<tr>
+								<td>45명</td>
+								<td>32명</td>
+								<td>28명</td>
+								<td>15명</td>
+							</tr>
+						</table>
 
-                    <table class="status-table">
-                        <tr class="section-title">
-                            <td colspan="4">성별 현황</td>
-                        </tr>
-                        <tr>
-                            <th>구분</th>
-                            <th>남성</th>
-                            <th>여성</th>
-                            <th>합계</th>
-                        </tr>
-                        <tr>
-                            <td>명</td>
-                            <td>72</td>
-                            <td>48</td>
-                            <td>120</td>
-                        </tr>
-                        <tr>
-                            <td>%</td>
-                            <td>60.0%</td>
-                            <td>40.0%</td>
-                            <td>100%</td>
-                        </tr>
-                    </table>
+						<table class="status-table">
+							<tr class="section-title">
+								<td colspan="4">성별 현황</td>
+							</tr>
+							<tr>
+								<th>구분</th>
+								<th>남성</th>
+								<th>여성</th>
+								<th>합계</th>
+							</tr>
+							<tr>
+								<td>명</td>
+								<td>72</td>
+								<td>48</td>
+								<td>120</td>
+							</tr>
+							<tr>
+								<td>%</td>
+								<td>60.0%</td>
+								<td>40.0%</td>
+								<td>100%</td>
+							</tr>
+						</table>
 
-                    <table class="status-table">
-                        <tr class="section-title">
-                            <td colspan="5">연령별 현황</td>
-                        </tr>
-                        <tr>
-                            <th>20대</th>
-                            <th>30대</th>
-                            <th>40대</th>
-                            <th>50대</th>
-                            <th>60대</th>
-                        </tr>
-                        <tr>
-                            <td>52명</td>
-                            <td>38명</td>
-                            <td>22명</td>
-                            <td>6명</td>
-                            <td>2명</td>
-                        </tr>
-                    </table>
+						<table class="status-table">
+							<tr class="section-title">
+								<td colspan="5">연령별 현황</td>
+							</tr>
+							<tr>
+								<th>20대</th>
+								<th>30대</th>
+								<th>40대</th>
+								<th>50대</th>
+								<th>60대</th>
+							</tr>
+							<tr>
+								<td>52명</td>
+								<td>38명</td>
+								<td>22명</td>
+								<td>6명</td>
+								<td>2명</td>
+							</tr>
+						</table>
 
-                    <table class="status-table">
-                        <tr class="section-title">
-                            <td colspan="5">학력별 현황</td>
-                        </tr>
-                        <tr>
-                            <th>고졸이하</th>
-                            <th>2~3년제</th>
-                            <th>4년제</th>
-                            <th>석사</th>
-                            <th>박사</th>
-                        </tr>
-                        <tr>
-                            <td>8명</td>
-                            <td>18명</td>
-                            <td>76명</td>
-                            <td>16명</td>
-                            <td>2명</td>
-                        </tr>
-                    </table>
+						<table class="status-table">
+							<tr class="section-title">
+								<td colspan="5">학력별 현황</td>
+							</tr>
+							<tr>
+								<th>고졸이하</th>
+								<th>2~3년제</th>
+								<th>4년제</th>
+								<th>석사</th>
+								<th>박사</th>
+							</tr>
+							<tr>
+								<td>8명</td>
+								<td>18명</td>
+								<td>76명</td>
+								<td>16명</td>
+								<td>2명</td>
+							</tr>
+						</table>
 
-                    <table class="status-table">
-                        <tr class="section-title">
-                            <td colspan="8">외국어 현황</td>
-                        </tr>
-                        <tr>
-                            <th>토익</th>
-                            <th>토플</th>
-                            <th>텝스</th>
-                            <th>토익스피킹</th>
-                            <th>오픽</th>
-                            <th>JPT</th>
-                            <th>HSK</th>
-                            <th>기타</th>
-                        </tr>
-                        <tr>
-                            <td>85명</td>
-                            <td>12명</td>
-                            <td>8명</td>
-                            <td>24명</td>
-                            <td>18명</td>
-                            <td>6명</td>
-                            <td>4명</td>
-                            <td>3명</td>
-                        </tr>
-                    </table>
+						<table class="status-table">
+							<tr class="section-title">
+								<td colspan="8">외국어 현황</td>
+							</tr>
+							<tr>
+								<th>토익</th>
+								<th>토플</th>
+								<th>텝스</th>
+								<th>토익스피킹</th>
+								<th>오픽</th>
+								<th>JPT</th>
+								<th>HSK</th>
+								<th>기타</th>
+							</tr>
+							<tr>
+								<td>85명</td>
+								<td>12명</td>
+								<td>8명</td>
+								<td>24명</td>
+								<td>18명</td>
+								<td>6명</td>
+								<td>4명</td>
+								<td>3명</td>
+							</tr>
+						</table>
 
-                    <table class="status-table">
-                        <tr class="section-title">
-                            <td colspan="5">자격증 현황</td>
-                        </tr>
-                        <tr>
-                            <th>정처기</th>
-                            <th>SQLD</th>
-                            <th>리눅스마스터</th>
-                            <th>OCP</th>
-                            <th>ADSP</th>
-                        </tr>
-                        <tr>
-                            <td>42명</td>
-                            <td>28명</td>
-                            <td>15명</td>
-                            <td>8명</td>
-                            <td>12명</td>
-                        </tr>
-                    </table>
+						<table class="status-table">
+							<tr class="section-title">
+								<td colspan="5">자격증 현황</td>
+							</tr>
+							<tr>
+								<th>정처기</th>
+								<th>SQLD</th>
+								<th>리눅스마스터</th>
+								<th>OCP</th>
+								<th>ADSP</th>
+							</tr>
+							<tr>
+								<td>42명</td>
+								<td>28명</td>
+								<td>15명</td>
+								<td>8명</td>
+								<td>12명</td>
+							</tr>
+						</table>
 
-                    <table class="status-table">
-                        <tr class="section-title">
-                            <td colspan="5">자격증 보유개수</td>
-                        </tr>
-                        <tr>
-                            <th>미보유</th>
-                            <th>1개</th>
-                            <th>2개</th>
-                            <th>3개</th>
-                            <th>4개이상</th>
-                        </tr>
-                        <tr>
-                            <td>25명</td>
-                            <td>48명</td>
-                            <td>32명</td>
-                            <td>12명</td>
-                            <td>3명</td>
-                        </tr>
-                    </table>
+						<table class="status-table">
+							<tr class="section-title">
+								<td colspan="5">자격증 보유개수</td>
+							</tr>
+							<tr>
+								<th>미보유</th>
+								<th>1개</th>
+								<th>2개</th>
+								<th>3개</th>
+								<th>4개이상</th>
+							</tr>
+							<tr>
+								<td>25명</td>
+								<td>48명</td>
+								<td>32명</td>
+								<td>12명</td>
+								<td>3명</td>
+							</tr>
+						</table>
 
-                    <table class="status-table">
-                        <tr class="section-title">
-                            <td colspan="3">포트폴리오 제출 현황</td>
-                        </tr>
-                        <tr>
-                            <th>제출자</th>
-                            <th>미제출자</th>
-                            <th>제출율</th>
-                        </tr>
-                        <tr>
-                            <td>84명</td>
-                            <td>36명</td>
-                            <td>70.0%</td>
-                        </tr>
-                    </table>
-                </div>
+						<table class="status-table">
+							<tr class="section-title">
+								<td colspan="3">포트폴리오 제출 현황</td>
+							</tr>
+							<tr>
+								<th>제출자</th>
+								<th>미제출자</th>
+								<th>제출율</th>
+							</tr>
+							<tr>
+								<td>84명</td>
+								<td>36명</td>
+								<td>70.0%</td>
+							</tr>
+						</table>
+					</div>
 
-				<!-- Modal footer -->
+					<!-- Modal footer -->
 				<div class="modal-footer">
 					<button type="button" class="btn btn-danger"
 						data-bs-dismiss="modal">Close</button>
@@ -298,8 +296,6 @@
 			</div>
 		</div>
 	</div>
-
-	
 	
 </div>
  
