--- a/src/main/resources/templates/corp/jobPosting/myJobPostingListPage.html
+++ b/src/main/resources/templates/corp/jobPosting/myJobPostingListPage.html
@@ -76,7 +76,7 @@
 					<tr th:each="post : ${postList}">
 						<td class="posting-box-need-center" th:text="${post.isEnded == 'N' ? '진행 중' : '공고 마감'}"></td>
 						<td>
-							<a><span id="jobPosting-${jobPostingSeq}"  class="detail-posting-link" th:text="${post.postingTitle}" th:onclick="'getDetailPostingInfo('+ ${post.jobPostingSeq} +')'"></span></a>
+							<a><span th:id="'jobPostingTitle-' + ${post.jobPostingSeq}"  class="detail-posting-link" th:text="${post.postingTitle}" th:onclick="'getDetailPostingInfo('+ ${post.jobPostingSeq} +')'"></span></a>
 							<ul>
 								<li>근무형태 : <span th:text="${post.employType}"></span> </li>
 								<li>포지션 : <span th:text="${post.positionName}"></span> </li>
@@ -94,7 +94,7 @@
 							<button type="button" readonly>마감 </button>
 						</td>
 						<td class="posting-box-need-center">
-							<div><a style="cursor: pointer; text-decoration: underline;" th:onclick="openApplicantListModal()"><span th:text="${post.appCnt}"></span> </a></div>
+							<div><a style="cursor: pointer; text-decoration: underline;" th:onclick="openApplicantListModal()"><span th:id="'applicant-cnt-' + ${post.jobPostingSeq}"  th:text="${post.appCnt}"></span> </a></div>
 							<div style="color: black; cursor: pointer;" th:onclick="openApplicantListModal()"> 지원자 관리 <i class="bi bi-file-earmark-ruled"></i></div>
 							<div> <input type="button" value="지원자 통계" class="appl-stats-btn" th:attr="data-appli-stats=${post.jobPostingSeq}"> </div>
 						</td>
@@ -120,7 +120,7 @@
 
 					<!-- Modal body -->
 					<div class="modal-body">
-						<div class="total-applicants">총 지원자수: 120명</div>
+						<div class="total-applicants">총 지원자수: <span id="totalApplicantCount"></span>명</div>
 
 						<table class="status-table">
 							<tr class="section-title">
@@ -128,15 +128,15 @@
 							</tr>
 							<tr>
 								<th>신입</th>
-								<th>1~3년</th>
+								<th >1~3년</th>
 								<th>3~5년</th>
 								<th>5년이상</th>
 							</tr>
 							<tr>
-								<td>45명</td>
-								<td>32명</td>
-								<td>28명</td>
-								<td>15명</td>
+								<td> <span id="newEmployee"></span> 명</td>
+								<td> <span id="oneYearEmployee"></span> 명</td>
+								<td> <span id="threeYearEmployee"></span> 명</td>
+								<td> <span id="fiveYearEmployee"></span> 명</td>
 							</tr>
 						</table>
 
@@ -145,22 +145,22 @@
 								<td colspan="4">성별 현황</td>
 							</tr>
 							<tr>
-								<th>구분</th>
-								<th>남성</th>
+								<th >구분</th>
+								<th >남성</th>
 								<th>여성</th>
 								<th>합계</th>
 							</tr>
 							<tr>
 								<td>명</td>
-								<td>72</td>
-								<td>48</td>
-								<td>120</td>
+								<td id="maleCount">72</td>
+								<td id="femaleCount">48</td>
+								<td id="malePlusFemaleCount">120</td>
 							</tr>
 							<tr>
 								<td>%</td>
-								<td>60.0%</td>
-								<td>40.0%</td>
-								<td>100%</td>
+								<td> <span id="maleRatio"></span>%</td>
+								<td> <span id="femaleRatio"></span>%</td>
+								<td >100%</td>
 							</tr>
 						</table>
 
@@ -169,18 +169,18 @@
 								<td colspan="5">연령별 현황</td>
 							</tr>
 							<tr>
-								<th>20대</th>
-								<th>30대</th>
-								<th>40대</th>
-								<th>50대</th>
-								<th>60대</th>
+								<th >20대</th>
+								<th >30대</th>
+								<th >40대</th>
+								<th >50대</th>
+								<th >60대</th>
 							</tr>
 							<tr>
-								<td>52명</td>
-								<td>38명</td>
-								<td>22명</td>
-								<td>6명</td>
-								<td>2명</td>
+								<td> <span id="ageGroup20s"></span>명</td>
+								<td> <span id="ageGroup30s"></span>명</td>
+								<td> <span id="ageGroup40s"></span>명</td>
+								<td> <span id="ageGroup50s"></span>명</td>
+								<td> <span id="ageGroup60s"></span>명</td>
 							</tr>
 						</table>
 
@@ -196,17 +196,17 @@
 								<th>박사</th>
 							</tr>
 							<tr>
-								<td>8명</td>
-								<td>18명</td>
-								<td>76명</td>
-								<td>16명</td>
-								<td>2명</td>
+								<td> <span id="highSchoolCount"></span>명</td>
+								<td> <span id="associateDegreeCount"></span>명</td>
+								<td> <span id="bachelorDegreeCount"></span>명</td>
+								<td> <span id="masterDegreeCount"></span>명</td>
+								<td> <span id="doctorateDegreeCount"></span>명</td>
 							</tr>
 						</table>
 
 						<table class="status-table">
 							<tr class="section-title">
-								<td colspan="8">외국어 현황</td>
+								<td colspan="8">어학 자격증 현황</td>
 							</tr>
 							<tr>
 								<th>토익</th>
@@ -216,23 +216,21 @@
 								<th>오픽</th>
 								<th>JPT</th>
 								<th>HSK</th>
-								<th>기타</th>
 							</tr>
 							<tr>
-								<td>85명</td>
-								<td>12명</td>
-								<td>8명</td>
-								<td>24명</td>
-								<td>18명</td>
-								<td>6명</td>
-								<td>4명</td>
-								<td>3명</td>
+								<td> <span id="hasToeicCount"></span>명</td>
+								<td> <span id="hasToeflCount"></span>명</td>
+								<td> <span id="hasTepsCount"></span>명</td>
+								<td> <span id="hasToeicSpeakingCount"></span>명</td>
+								<td> <span id="hasOpicCount"></span>명</td>
+								<td> <span id="hasJptCount"></span>명</td>
+								<td> <span id="hasHskCount"></span>명</td>
 							</tr>
 						</table>
 
 						<table class="status-table">
 							<tr class="section-title">
-								<td colspan="5">자격증 현황</td>
+								<td colspan="5">컴퓨터 자격증 현황</td>
 							</tr>
 							<tr>
 								<th>정처기</th>
@@ -242,11 +240,11 @@
 								<th>ADSP</th>
 							</tr>
 							<tr>
-								<td>42명</td>
-								<td>28명</td>
-								<td>15명</td>
-								<td>8명</td>
-								<td>12명</td>
+								<td> <span id="hasJcgCount"></span>명</td>
+								<td> <span id="hasSqldCount"></span>명</td>
+								<td> <span id="hasLinuxCount"></span>명</td>
+								<td> <span id="hasOcpCount"></span>명</td>
+								<td> <span id="hasAdspCount"></span>명</td>
 							</tr>
 						</table>
 
@@ -262,11 +260,11 @@
 								<th>4개이상</th>
 							</tr>
 							<tr>
-								<td>25명</td>
-								<td>48명</td>
-								<td>32명</td>
-								<td>12명</td>
-								<td>3명</td>
+								<td> <span id="has0CertCount"></span>명</td>
+								<td> <span id="has1CertCount"></span>명</td>
+								<td> <span id="has2CertCount"></span>명</td>
+								<td> <span id="has3CertCount"></span>명</td>
+								<td> <span id="has4OrMoreCount"></span>명</td>
 							</tr>
 						</table>
 
@@ -280,9 +278,9 @@
 								<th>제출율</th>
 							</tr>
 							<tr>
-								<td>84명</td>
-								<td>36명</td>
-								<td>70.0%</td>
+								<td> <span id="sentProjectCount"></span>명</td>
+								<td> <span id="noSentProjectCount"></span>명</td>
+								<td> <span id="sentProjectRatio"></span>%</td>
 							</tr>
 						</table>
 					</div>
