--- a/src/main/resources/static/user/jobPosting/css/job_posting_detail.css
+++ b/src/main/resources/static/user/jobPosting/css/job_posting_detail.css
@@ -1009,3 +1009,27 @@
 .modal-content::-webkit-scrollbar-thumb:hover {
     background: #a8a8a8;
 }
+
+
+.floating-apply-btn {
+  display: inline-block;
+  text-align: center;
+  padding: 10px 16px;
+  font-size: 16px;
+  border-radius: 20px;
+  background-color: #218838;
+  color: white;
+  text-decoration: none;
+  border: none;
+  min-width: 120px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+
+
+.floating-apply-btn:disabled,
+.floating-apply-btn.disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
