--- a/src/main/resources/templates/admin/admin_dashboard.html
+++ b/src/main/resources/templates/admin/admin_dashboard.html
@@ -35,7 +35,28 @@
   width: 100% !important;
   height: 400px; /* 꽉 채우기 */
 }
+.table-fixed {
+  table-layout: fixed;
+  width: 100%;
+}
 
+.table-fixed th, .table-fixed td {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.col-id {
+  width: 100px;
+}
+
+.col-title {
+  width: 300px;
+}
+
+.col-status {
+  width: 120px;
+}
 </style>
 
 </head>
@@ -55,24 +76,27 @@
     <canvas id="indChart"></canvas>
   </div>
   <div class="chart-box">
-  	<table class="table table-bordered">
-  	<tr>
-  		<td colspan="2">현재 비답장 상태인 문의들</td>
-  		<td>0개</td>
-  	</tr>
-  	<tr>
-  		<td>문의 번호</td>
-  		<td>제목</td>
-  		<td>문의 상태</td>
-  	</tr>
-  	<tr>
-  		<tr th:each="ask:${ask}">
-  		<td th:text="${ask.askSeq}"></td>
-  		<td th:text="${ask.title}"></td>
-  		<td th:text="${ask.answerStat}"></td>
-  		</tr>
-  	</tr>
-  	</table>
+  	<span>답장되지않은 문의 4개
+  	&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+  	&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+	<a href="#">전체보기</a>
+	</span>
+  	<table class="table table-bordered table-fixed">
+  <thead>
+    <tr>
+      <th class="col-id">문의 번호</th>
+      <th class="col-title">제목</th>
+      <th class="col-status">문의 상태</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr th:each="ask : ${ask}">
+      <td class="col-id" th:text="${ask.askSeq}"></td>
+      <td class="col-title"><a href="#" th:text="${ask.title}"></a></td>
+      <td class="col-status" th:text="${ask.answerStat}"></td>
+    </tr>
+  </tbody>
+</table>
   </div>
 </div>
 
