--- a/src/main/resources/templates/corp/jobPosting/updateJobPostingForm.html
+++ b/src/main/resources/templates/corp/jobPosting/updateJobPostingForm.html
@@ -38,7 +38,7 @@ document.addEventListener('DOMContentLoaded', () => {
 	initProgressTracking();
 	
 	// 미리보기 기능 :미구현 
-	initPreviewFeature();
+	//initPreviewFeature();
 	
 	// 공고 시작일을 현재 날짜로 설정
 	setPostingStartDate();
@@ -503,13 +503,13 @@ function initProgressTracking() {
 /**
  * 미리보기 기능 초기화
  */
-function initPreviewFeature() {
+/* function initPreviewFeature() {
 	document.querySelector('.preview-btn').addEventListener('click', function() {
 		const formData = collectFormData();
 		
 		alert('미리보기 기능을 준비중.. \n\n입력된 데이터는 콘솔에서 확인..');
 	});
-}
+} */
 
 /**
  * 공고 시작일을 현재 날짜로 설정
